--- a/index.html
+++ b/index.html
@@ -53,3 +53,15 @@
     <script src="script.js"></script>
 </body>
 </html>
+<nav>
+  <a href="index.html">Inicio</a>
+
+  <div class="submenu">
+    <span>Mis Proyectos</span>
+    <div class="dropdown">
+      <a href="numero-magico/index.html">🔮 Número Mágico</a>
+      <a href="proyecto-final/index.html">🚀 Proyecto Final</a>
+    </div>
+  </div>
+</nav>
+
